--- a/app/src/main/res/drawable/ic_backspace.xml
+++ b/app/src/main/res/drawable/ic_backspace.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- Backspace/Delete icon -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
+    android:width="48dp"
+    android:height="48dp"
+    android:viewportWidth="256"
+    android:viewportHeight="256">
+    
     <path
-        android:fillColor="@android:color/white"
-        android:pathData="M22,3H7c-0.69,0 -1.23,0.35 -1.59,0.88L0,12l5.41,8.11c0.36,0.53 0.9,0.89 1.59,0.89h15c1.1,0 2,-0.9 2,-2V5c0,-1.1 -0.9,-2 -2,-2zM19,15.59L17.59,17L14,13.41L10.41,17L9,15.59L12.59,12L9,8.41L10.41,7L14,10.59L17.59,7L19,8.41L15.41,12L19,15.59z"/>
+        android:fillColor="#555555"
+        android:pathData="M216,35.99963H68.5293a20.097,20.097,0,0,0-17.14942,9.71094L5.71,121.8258a11.99886,11.99886,0,0,0,0,12.34766l45.66992,76.11621a20.09857,20.09857,0,0,0,17.14942,9.71H216a20.02229,20.02229,0,0,0,20-20v-144A20.02229,20.02229,0,0,0,216,35.99963Zm-4,160H70.79492l-40.80078-68,40.80078-68H212ZM103.51465,143.51428l15.51465-15.51465L103.51465,112.485a12.0001,12.0001,0,0,1,16.9707-16.9707L136,111.02893l15.51465-15.51465a12.0001,12.0001,0,0,1,16.9707,16.9707L152.9707,127.99963l15.51465,15.51465a12.0001,12.0001,0,0,1-16.9707,16.9707L136,144.97034,120.48535,160.485a12.0001,12.0001,0,1,1-16.9707-16.9707Z"/>
+    
 </vector>
 
