--- a/app/src/main/res/xml/backup_rules.xml
+++ b/app/src/main/res/xml/backup_rules.xml
@@ -1,13 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?><!--
-   Sample backup rules file; uncomment and customize as necessary.
+<?xml version="1.0" encoding="utf-8"?>
+<!--
+   Backup rules for Android API <31 (legacy Auto Backup)
+   For API 31+, see data_extraction_rules.xml
    See https://developer.android.com/guide/topics/data/autobackup
-   for details.
-   Note: This file is ignored for devices older than API 31
-   See https://developer.android.com/about/versions/12/backup-restore
 -->
 <full-backup-content>
-    <!--
-   <include domain="sharedpref" path="."/>
-   <exclude domain="sharedpref" path="device.xml"/>
--->
+    <!-- Exclude encrypted SharedPreferences (contains sensitive settings) -->
+    <exclude domain="sharedpref" path="system_settings_encrypted.xml"/>
+    
+    <!-- Exclude certificate storage (contains machine certificates) -->
+    <exclude domain="sharedpref" path="certificate_storage.xml"/>
+    
+    <!-- Exclude all encrypted preferences -->
+    <exclude domain="sharedpref" path="*_encrypted.xml"/>
 </full-backup-content>
