--- a/app/src/main/res/xml/data_extraction_rules.xml
+++ b/app/src/main/res/xml/data_extraction_rules.xml
@@ -1,19 +1,25 @@
-<?xml version="1.0" encoding="utf-8"?><!--
-   Sample data extraction rules file; uncomment and customize as necessary.
+<?xml version="1.0" encoding="utf-8"?>
+<!--
+   Data extraction rules for Android 12+ (API 31+)
+   Excludes sensitive data from cloud backups and device transfers
    See https://developer.android.com/about/versions/12/backup-restore#xml-changes
-   for details.
 -->
 <data-extraction-rules>
     <cloud-backup>
-        <!-- TODO: Use <include> and <exclude> to control what is backed up.
-        <include .../>
-        <exclude .../>
-        -->
+        <!-- Exclude encrypted SharedPreferences (contains sensitive settings) -->
+        <exclude domain="sharedpref" path="system_settings_encrypted.preferences_pb"/>
+        
+        <!-- Exclude certificate storage (contains machine certificates) -->
+        <exclude domain="sharedpref" path="certificate_storage.preferences_pb"/>
+        
+        <!-- Exclude all encrypted preferences -->
+        <exclude domain="sharedpref" path="*_encrypted.preferences_pb"/>
     </cloud-backup>
-    <!--
+    
     <device-transfer>
-        <include .../>
-        <exclude .../>
+        <!-- Same exclusions for device-to-device transfer -->
+        <exclude domain="sharedpref" path="system_settings_encrypted.preferences_pb"/>
+        <exclude domain="sharedpref" path="certificate_storage.preferences_pb"/>
+        <exclude domain="sharedpref" path="*_encrypted.preferences_pb"/>
     </device-transfer>
-    -->
 </data-extraction-rules>
