--- a/app/src/main/res/layout/activity_pin.xml
+++ b/app/src/main/res/layout/activity_pin.xml
@@ -79,7 +79,7 @@
                 android:text="PIN Code Verification"
                 android:textSize="72sp"
                 android:textColor="@android:color/white"
-                android:fontFamily="sans-serif-medium"
+                android:fontFamily="@font/gilroy"
                 android:gravity="center"
                 android:layout_marginBottom="60dp"/>
 
@@ -90,7 +90,7 @@
                 android:text="Enter your PIN from the mobile app"
                 android:textSize="48sp"
                 android:textColor="#B3FFFFFF"
-                android:fontFamily="sans-serif-light"
+                android:fontFamily="@font/gilroy"
                 android:gravity="center"
                 android:layout_marginBottom="80dp"/>
 
@@ -158,7 +158,7 @@
                     android:text="Coming Soon\nThis feature will be available with the mobile app"
                     android:textSize="36sp"
                     android:textColor="#B3FFFFFF"
-                    android:fontFamily="sans-serif-light"
+                    android:fontFamily="@font/gilroy"
                     android:gravity="center"
                     android:lineSpacingExtra="8dp"/>
 
