--- a/app/src/main/res/layout/dialog_consent.xml
+++ b/app/src/main/res/layout/dialog_consent.xml
@@ -36,7 +36,7 @@
         android:text="Agree to our terms"
         android:textSize="@dimen/modal_title_size"
         android:textColor="#555555"
-        android:fontFamily="@font/inter"
+        android:fontFamily="@font/gilroy"
         android:textStyle="bold"
         android:gravity="center"
         android:layout_marginBottom="24dp"/>
@@ -49,7 +49,7 @@
         android:text="By continuing, you agree to our Terms and Privacy Policy and receive a one-time SMS code."
         android:textSize="@dimen/modal_text_size"
         android:textColor="#555555"
-        android:fontFamily="@font/inter"
+        android:fontFamily="@font/gilroy"
         android:gravity="center"
         android:lineSpacingExtra="4dp"
         android:lineSpacingMultiplier="1.15"
@@ -70,7 +70,7 @@
             android:text="waterfountain.com/terms"
             android:textSize="@dimen/modal_text_size"
             android:textColor="#8B7BA8"
-            android:fontFamily="@font/inter"
+            android:fontFamily="@font/gilroy"
             android:layout_marginBottom="8dp"/>
 
         <TextView
@@ -80,7 +80,7 @@
             android:text="waterfountain.com/privacy"
             android:textSize="@dimen/modal_text_size"
             android:textColor="#8B7BA8"
-            android:fontFamily="@font/inter"/>
+            android:fontFamily="@font/gilroy"/>
 
     </LinearLayout>
 
