--- a/app/src/main/res/layout/activity_sms.xml
+++ b/app/src/main/res/layout/activity_sms.xml
@@ -502,6 +502,7 @@
                             android:textColor="#2f2f2f"
                             android:fontFamily="@font/gilroy"
                             android:gravity="start"
+                            android:includeFontPadding="false"
                             android:lineSpacingExtra="6dp"
                             android:lineSpacingMultiplier="1.2"
                             android:layout_marginTop="16dp"
@@ -562,6 +563,7 @@
                             android:textColor="#2f2f2f"
                             android:fontFamily="@font/gilroy"
                             android:gravity="start"
+                            android:includeFontPadding="false"
                             android:lineSpacingExtra="6dp"
                             android:lineSpacingMultiplier="1.2"
                             android:layout_marginTop="16dp"
@@ -622,6 +624,7 @@
                             android:textColor="#2f2f2f"
                             android:fontFamily="@font/gilroy"
                             android:gravity="start"
+                            android:includeFontPadding="false"
                             android:lineSpacingExtra="6dp"
                             android:lineSpacingMultiplier="1.2"
                             android:layout_marginTop="16dp"
@@ -682,6 +685,7 @@
                             android:textColor="#2f2f2f"
                             android:fontFamily="@font/gilroy"
                             android:gravity="start"
+                            android:includeFontPadding="false"
                             android:lineSpacingExtra="6dp"
                             android:lineSpacingMultiplier="1.2"
                             android:layout_marginTop="16dp"
@@ -741,6 +745,7 @@
                             android:textColor="#2f2f2f"
                             android:fontFamily="@font/gilroy"
                             android:gravity="start"
+                            android:includeFontPadding="false"
                             android:lineSpacingExtra="6dp"
                             android:lineSpacingMultiplier="1.2"
                             android:layout_marginTop="16dp"
