--- a/app/src/main/res/layout/activity_sms_verify.xml
+++ b/app/src/main/res/layout/activity_sms_verify.xml
@@ -584,6 +584,7 @@
                             android:textColor="#2f2f2f"
                             android:fontFamily="@font/gilroy"
                             android:gravity="start"
+                            android:includeFontPadding="false"
                             android:lineSpacingExtra="6dp"
                             android:lineSpacingMultiplier="1.2"
                             android:layout_marginTop="16dp"
@@ -644,6 +645,7 @@
                             android:textColor="#2f2f2f"
                             android:fontFamily="@font/gilroy"
                             android:gravity="start"
+                            android:includeFontPadding="false"
                             android:lineSpacingExtra="6dp"
                             android:lineSpacingMultiplier="1.2"
                             android:layout_marginTop="16dp"
@@ -704,6 +706,7 @@
                             android:textColor="#2f2f2f"
                             android:fontFamily="@font/gilroy"
                             android:gravity="start"
+                            android:includeFontPadding="false"
                             android:lineSpacingExtra="6dp"
                             android:lineSpacingMultiplier="1.2"
                             android:layout_marginTop="16dp"
@@ -764,6 +767,7 @@
                             android:textColor="#2f2f2f"
                             android:fontFamily="@font/gilroy"
                             android:gravity="start"
+                            android:includeFontPadding="false"
                             android:lineSpacingExtra="6dp"
                             android:lineSpacingMultiplier="1.2"
                             android:layout_marginTop="16dp"
@@ -823,6 +827,7 @@
                             android:textColor="#2f2f2f"
                             android:fontFamily="@font/gilroy"
                             android:gravity="start"
+                            android:includeFontPadding="false"
                             android:lineSpacingExtra="6dp"
                             android:lineSpacingMultiplier="1.2"
                             android:layout_marginTop="16dp"
